kubernetes/apps/vikunja/board/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vikunja-board
  labels:
    app.kubernetes.io/name: vikunja-board
    app.kubernetes.io/part-of: vikunja
spec:
  selector:
    app.kubernetes.io/name: vikunja-board
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
